--- a/miro/styles/styles.css
+++ b/miro/styles/styles.css
@@ -17,6 +17,8 @@ header {
 
 nav {
     display: flex;
+    margin: 0 auto;
+    width: 1200px;
     height: 90px;
 }
 
@@ -61,8 +63,9 @@ nav>ul>li>a {
 }
 
 main {
-    width: 1120px;
+    width: 1200px;
     margin: 0 auto;
+    padding: 0 40px;
 }
 
 h1, h2 {
@@ -74,17 +77,40 @@ h1, h2 {
     margin-bottom: 19px;
 }
 
+section {
+    display: flex;
+    margin-bottom: 120px;
+}
+
+footer {
+    color: #FFF;
+    background-color: #050038;
+
+    padding: 47px 0 46px 0;
+}
+
+footer>div {
+    display: flex;
+    padding: 0 40px;
+    column-gap: 20px;
+    width: 1200px;
+    margin: 0 auto;
+}
+
+footer a, footer p {
+    margin: 0;
+    font-size: 16px;
+    line-height: 24px;
+}
+
 .ptext {
     font-size: 18px;
     line-height: 24px;
+    margin-bottom: 39px;
 }
 
 .gray {
     color: #05003899;
-}
-
-#heroSection {
-    display: flex;
 }
 
 #heroSection>img {
@@ -107,7 +133,6 @@ h1, h2 {
     width: 100%;
     display: flex;
     column-gap: 20px;
-    margin-bottom: 128px;
     align-items: center;
     height: 33px;
 }
@@ -165,7 +190,6 @@ h1, h2 {
 
 #secondSection {
     margin-top: 0;
-    display: flex;
     justify-content: space-between;
 }
 
@@ -174,12 +198,23 @@ h1, h2 {
     margin: 82px 116px 120px 0;
 }
 
-#secondSection>div>p {
-    margin-bottom: 39px;
-}
-
 #secondSection>img {
     margin: 0;
     width: 550px;
     height: 535px
+}
+
+#thirdSection {
+    margin-bottom: 120px;
+    column-gap: 115px;
+    width: 1120px;
+}
+
+#thirdSection>img {
+    max-width: 550px;
+
+}
+
+#thirdSection>div {
+    padding-top: 63px;
 }
