--- a/school/styles/components/button.css
+++ b/school/styles/components/button.css
@@ -5,7 +5,7 @@
     font-weight: 400;
     line-height: 120%;
     padding: 15px 31px;
-    box-sizing: border-box;
+    cursor: pointer;
 }
 
 .button_primary {
