--- a/school/styles/global.css
+++ b/school/styles/global.css
@@ -14,6 +14,7 @@ body {
     background: var(--Black);
     font-family: Fira Sans, sans-serif;
     font-style: normal;
+    box-sizing: border-box;
 }
 
 a {
