--- a/school/styles/page.css
+++ b/school/styles/page.css
@@ -219,6 +219,10 @@
     gap: 24px;
     flex-basis: content;
     overflow-y: hidden;
+    scrollbar-width: none;
+    padding-left: 24px;
+    margin-right: -24px;
+    margin-left: -24px;
 }
 
 .courses__chip-line::-webkit-scrollbar {
@@ -227,14 +231,20 @@
 
 .courses__cards {
     display: grid;
-    gap: 70px;
-    grid-template-columns: repeat(auto-fit, minmax(312px, 1fr));
+    gap: 46px;
+    grid-template-columns: repeat(3, minmax(360px, 1fr));
 }
 
+@media (max-width: 1200px) {
+    .courses__cards {
+        grid-template-columns: repeat(2, 360px);
+    }
+}
 
-@media (max-width: 586px) {
+@media (max-width: 814px) {
     .courses {
         padding: 41px 24px;
+
     }
 
     .courses__chip-line {
@@ -248,6 +258,104 @@
     }
 
     .courses__cards {
+        grid-template-columns: 312px;
+        justify-content: center;
         gap: 24px;
+    }
+}
+
+.feedback {
+    background-color: var(--Gray-dark, #1E1F29);
+
+}
+
+.feedback__wrapper {
+    max-width: 1172px;
+    margin: 0 auto;
+    padding: 100px 24px;
+    display: grid;
+    grid-template-columns: [start] repeat(3, 1fr) [end];
+    gap: 0 70px;
+}
+
+.feedback__header {
+    grid-column: start / end;
+    margin-bottom: 48px;
+}
+
+.feedback__text_gradient {
+    background: var(--Grad1, linear-gradient(93deg, #D77BE5 9.26%, #BE63E5 42.32%, #6C38CC 104.58%));
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    text-align: center;
+    font-size: 46px;
+    font-weight: 700;
+    line-height: 120%;
+}
+
+.feedback__stat_card {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    margin-bottom: 70px;
+}
+
+.feedback__text_base {
+    color: var(--White, #FAFAFA);
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 120%;
+}
+
+.feedback__ratings-header {
+    grid-column: start / end;
+    color: var(--White, #FAFAFA);
+    font-size: 36px;
+    font-weight: 400;
+    line-height: 120%;
+    margin-bottom: 32px;
+}
+
+.feedback__rating-wrapper {
+    display: flex;
+    align-items: center;
+    gap: 24px;
+}
+
+.rating-number {
+    color: var(--White, #FAFAFA);
+    font-size: 54px;
+    font-weight: 400;
+    line-height: 120%;
+}
+
+@media (max-width: 1200px) {
+    .feedback__wrapper {
+        grid-template-columns: [start] repeat(2, 1fr) [end];
+    }
+
+    .feedback__stat_card {
+        margin-bottom: 70px;
+    }
+
+    .feedback__rating-wrapper {
+        margin-bottom: 70px;
+    }
+}
+
+
+@media (max-width: 686px) {
+    .feedback__wrapper {
+        grid-template-columns: [start] 1fr [end];
+    }
+
+    .feedback__stat_card {
+        margin-bottom: 16px;
+    }
+
+    .feedback__rating-wrapper {
+        margin-bottom: 16px;
     }
 }
