--- a/BidBook/styles/global.css
+++ b/BidBook/styles/global.css
@@ -1,6 +1,10 @@
 :root {
-    --white: #D9D9D9;
+    --gray: #D9D9D9;
+    --gray-light: #F6F6F6;
+    --white: #fff;
     --black: #000;
+
+    --button-bg: #ECECEC;
 }
 
 
@@ -8,6 +12,7 @@ body {
     margin: 0;
     font-family: Roboto, sans-serif;
     font-style: normal;
+    background-color: var(--white);
 }
 
 a {
